--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
+    <p>Use the left and right arrow keys to run. Tap the down arrow to have Snake enter the tactical cardboard box.</p>
+
+    <p>If you hold the down arrow the enter and exit box transition animations will work, but only once.... Something's wrong with my logic.</p>
     <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 5px solid black; background: #007575"></canvas>
 </body>
 </html>
