--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-My Page
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>Game Project Shell</title>
+    <script type="text/javascript" src="./gameengine.js"></script>
+    <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
+</head>
+<body>
+    <p>Use the left and right arrow keys to run. Tap the down arrow to have Snake enter the tactical cardboard box.</p>
+
+    <p>If you hold the down arrow the enter and exit box transition animations will work, but only once.... Something's wrong with my logic.</p>
+    <canvas id="gameWorld" tabindex="1" width="800" height="800" style="border: 5px solid black; background: #007575"></canvas>
+</body>
+</html>
