--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Game Project Shell</title>
-    <script type="text/javascript" src="gameengine.js"></script>
-    <script type="text/javascript" src="assetmanager.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="./gameengine.js"></script>
+    <script type="text/javascript" src="./assetmanager.js"></script>
+    <script type="text/javascript" src="./main.js"></script>
 </head>
 <body>
     <p>Use the left and right arrow keys to run. Tap the down arrow to have Snake enter the tactical cardboard box.</p>
