--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </section>
       </div>
     </header>
-
+  <ul>
+    <li>Use the left and right arrow keys to run. Tap the down arrow to have Snake enter the tactical cardboard box.</li>
+    <li></li>
+    <li>If you hold the down arrow the enter and exit box transition animations will work, but only once.... Something's wrong with my logic.</li>
+  </ul>
     <canvas id="gameWorld" tabindex="1" width="800" height="800"></canvas>
 
     
